--- a/index/heidegger-index.yml
+++ b/index/heidegger-index.yml
@@ -178,6 +178,8 @@ Augenblick:
     GA 29/30:
     - start: 251
     - start: 257
+    - start: 427
+      suffix: f
 Ausbeutung:
   references:
     EWI:
@@ -589,6 +591,11 @@ Duineser Elegien:
     - start: 276
     - start: 278
   type: w
+Eigentlichkeit:
+  references:
+    GA 29/30:
+    - end: 427
+      start: 426
 Elemente:
   references:
     WBPh:
@@ -626,6 +633,9 @@ Entschlossenheit:
   references:
     GA 29/30:
     - start: 251
+    - start: 427
+  related:
+  - Augenblick
 Entzug:
   references:
     SvG:
@@ -664,6 +674,8 @@ Existenz:
     - start: 13
     - start: 279
     - start: 282
+    - end: 428
+      start: 426
 Farben:
   references:
     WBPh:
@@ -1920,6 +1932,10 @@ Prinzip:
   related:
   - Axiom
   - Grundsatz
+Problem der menschlichen Freiheit:
+  references:
+    GA 29/30:
+    - start: 429
 Psychische:
   references:
     EM:
@@ -2038,6 +2054,9 @@ Schein:
     EM:
     - end: 107
       start: 105
+    GA 29/30:
+    - end: 430
+      start: 429
     WBPh:
     - start: 268
     - start: 269
@@ -2419,6 +2438,13 @@ Trieb:
       start: 7
     - start: 11
     - start: 33
+Uneigentlichkeit:
+  references:
+    GA 29/30:
+    - start: 426
+    - start: 428
+  related:
+  - Eigentlichkeit
 Ungesprochene:
   references:
     WD:
@@ -2540,10 +2566,13 @@ Von der mannigfachen Bedeutung des Seienden nach Aristoteles:
 Vorhandenen:
   references:
     GA 29/30:
-    - end: 424
+    - end: 425
       start: 423
     - start: 434
       suffix: f
+    - end: 428
+      start: 427
+    - start: 431
 Vorstellen:
   references:
     GA 29/30:
@@ -2808,6 +2837,8 @@ als:
     - start: 483
       suffix: f
     - start: 487
+    - end: 425
+      start: 423
 als solches:
   references:
     GA 29/30:
@@ -2858,6 +2889,8 @@ bodenständig:
     G:
     - start: 521
       suffix: f
+    GA 29/30:
+    - start: 431
 causa:
   references:
     SvG:
@@ -3099,6 +3132,14 @@ unbestimmte Unmittelbare:
   references:
     SZ:
     - start: 3
+vulgäre Verstand:
+  references:
+    GA 29/30:
+    - end: 428
+      start: 426
+    - start: 422
+    - end: 431
+      start: 430
 weil:
   references:
     SvG:
