--- a/index/heidegger-index.yml
+++ b/index/heidegger-index.yml
@@ -643,8 +643,12 @@ Entzug:
     - start: 165
 Erde:
   references:
+    GA 16:
+    - start: 530
     SvG:
     - start: 189
+  related:
+  - Theologische Schriften 3, Gebet 3
 Ergriffenheit:
   references:
     GA 29/30:
@@ -1143,6 +1147,8 @@ Hebel, Johann Peter:
     GA 13:
     - start: 117
       suffix: f
+    GA 16:
+    - start: 530
   type: p
 Hegel, Georg Wilhelm Friedrich:
   references:
@@ -1165,6 +1171,8 @@ Heimat:
     G:
     - end: 522
       start: 520
+    GA 16:
+    - start: 530
 Heimweh:
   references:
     GA 29/30:
@@ -1214,6 +1222,13 @@ Herstellen:
     - start: 283
     - start: 287
     - start: 288
+Himmel:
+  references:
+    GA 16:
+    - start: 530
+  related:
+  - Theologische Schriften 3, Gebet 3
+  - Äther
 Himmlischen:
   references:
     WD:
@@ -2375,6 +2390,8 @@ Theologische Schriften 3, Gebet 3:
     G:
     - start: 521
     - start: 529
+    GA 16:
+    - start: 530
   type: w
 Thomas van Aquin:
   references:
@@ -3162,6 +3179,14 @@ wesentliche Möglichkeit des Seins:
   references:
     GA 29/30:
     - start: 115
+Äther:
+  references:
+    G:
+    - start: 521
+    GA 16:
+    - start: 530
+  related:
+  - Theologische Schriften 3, Gebet 3
 Ödipus:
   references:
     SvG:
